--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
    	<meta charset="utf-8">
    	<meta http-equiv="X-UA-Compatible" content="IE=edge">
     	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-    	<title>Mr. North</title>
+    	<title>Evolution of Cell Phones</title>
 	<link rel="stylesheet" href="main.css">
         <link href="https://fonts.googleapis.com/css?family=Pacifico|Quicksand:600|Roboto+Slab&display=swap" rel="stylesheet">
 
@@ -13,11 +13,11 @@
     <!--Menu Bar-->
     <div>
         <ul class="sidenav">
-            <li id="mrnorthtitle"><a class="active" href="index.html"><img src="square.jpg" width="40px" alt="Mr. North Logo"> Mr. North</a></li>
-            <li><a href="page1.html">Other Band Teachers</a></li>
-            <li><a href="page2.html">Pictures</a></li>
-            <li><a href="page3.html">Shrek and Mr. North</a></li>
-	    <li><a id="yes" href="page4.html">"I'll beat you with a Freshman"</a></li>
+            <li id="mrnorthtitle"><a class="active" href="index.html"><img src="square.jpg" width="40px" alt="Mr. North Logo"> Evolution of Cell Phones</a></li>
+            <li><a href="page1.html">All about the first phones</a></li>
+            <li><a href="page2.html">Compare the first cell phone to current phones</a></li>
+            <li><a href="page3.html">How current phones are different</a></li>
+	    <li><a id="yes" href="page4.html">Future Phone Technology</a></li>
         </ul>
     </div>
 
