--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!--Menu Bar-->
     <div>
         <ul class="sidenav">
-            <li id="mrnorthtitle"><a class="active" href="index.html"><img src="square.jpg" width="40px" alt="Mr. North Logo"> Evolution of Cell Phones</a></li>
+            <li id="mrnorthtitle"><a class="active" href="index.html"><img src="square.jpg" width="40px"> Evolution of Cell Phones</a></li>
             <li><a href="page1.html">All about the first phones</a></li>
             <li><a href="page2.html">Compare the first cell phone to current phones</a></li>
             <li><a href="page3.html">How current phones are different</a></li>
