--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
     </div>
 
 	<p>
-	<img id="fried" src="deepfried.jpg" width="400px" alt="Deep Fried Mr. North">
+	<img id="fried" src="deepfried.jpg" width="400px">
 	</p>
 	<h1 class="aboutmrnorth">
-	About Mr. North
+	About this website
 	</h1>
-	<h2 class="indexh2">
-	Favorite Phrases:
-	</h2>
+	<p class="info indexbody">
+	What was the first cell phone like? How much have phones changed? How are current smartphones different from each other? What is the future of technology in mobile phones?<br> These are all questions that you will find the answer to on this website.	
+	</p>
 	<ul class="list indexbody">
 		<li> "I'll beat you with a Freshman" </li>
 		<li> "Be quiet Altos"</li>
