--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <li><a href="page1.html">All about the first phones</a></li>
             <li><a href="page2.html">Compare the first cell phone to current phones</a></li>
             <li><a href="page3.html">How current phones are different</a></li>
-	    <li><a id="yes" href="page4.html">Future Phone Technology</a></li>
+	    <li><a href="page4.html">Future Phone Technology</a></li>
         </ul>
     </div>
 
