--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!--Menu Bar-->
     <div>
         <ul class="sidenav">
-            <li id="mrnorthtitle"><a class="active" href="index.html"><img src="square.jpg" width="40px"> Evolution of Cell Phones</a></li>
+            <li id="mrnorthtitle"><a class="active" href="index.html">Evolution of Cell Phones</a></li>
             <li><a href="page1.html">All about the first phones</a></li>
             <li><a href="page2.html">Compare the first cell phone to current phones</a></li>
             <li><a href="page3.html">How current phones are different</a></li>
@@ -22,18 +22,18 @@
     </div>
 
 	<p>
-	<img id="fried" src="deepfried.jpg" width="400px">
 	</p>
 	<h1 class="aboutmrnorth">
 	About this website
 	</h1>
 	<p class="info indexbody">
-	What was the first cell phone like? How much have phones changed? How are current smartphones different from each other? What is the future of technology in mobile phones?<br> These are all questions that you will find the answer to on this website.	
+	On this website you will find the answer to the following questions	
 	</p>
 	<ul class="list indexbody">
-		<li> "I'll beat you with a Freshman" </li>
-		<li> "Be quiet Altos"</li>
-		<li> "For Want of a Nail..." </li>
+		<li> What was the first cell phone like? </li>
+		<li> How much have phones changed?</li>
+		<li> How are current smartphones different from each other? </li>
+		<li> What is the future of technology in mobile phones? </li>
 	</ul>
 	<h2 class="indexh2">
 	Who is he?
