--- a/index.html
+++ b/index.html
@@ -14,10 +14,9 @@
     <div>
         <ul class="sidenav">
             <li id="mrnorthtitle"><a class="active" href="index.html">Evolution of Cell Phones</a></li>
-            <li><a href="page1.html">All about the first phones</a></li>
-            <li><a href="page2.html">Compare the first cell phone to current phones</a></li>
-            <li><a href="page3.html">How current phones are different</a></li>
-	    <li><a href="page4.html">Future Phone Technology</a></li>
+            <li><a href="page1.html">Compare the first cell phone to current phones</a></li>
+            <li><a href="page2.html">How current phones are different</a></li>
+            <li><a href="page3.html">Future Phone Technology</a></li>
         </ul>
     </div>
 
@@ -36,30 +35,13 @@
 		<li> What is the future of technology in mobile phones? </li>
 	</ul>
 	<h2 class="indexh2">
-	Who is he?
+	What was the very first cell phone availible to the public?
 	</h2>
 	<p class="info indexbody">
-	Brad North was the band director at Woodcreek High School. He was everyone's favorite teacher. 
-	Mr. North is now retired and relaxing with some peace and quiet.
-	Check out the <a href="page3.html"> Shrek and Mr. North</a> tab to see what he does in his free time.	
+	The Motorola DynaTAC 8000x. It was a crazy new idea that you could take a phone with you wherever you went. But being the first of its kind, it was very bulky, weighing in at 1.75 lbs. It was also very expensive, costing customers to pay $4,000 at launch (Worth about $10,400 now).  	
 	</p>
-	<h1 class="aboutmrnorth">
-	Other Awesome Websites:
-	</h1>
-	<h3 class="info indexh2">
-	Click here to learn about the movie about him: <a href="https://en.wikipedia.org/wiki/Mr._North" target="_blank"> Mr. North Movie </a>
-	</h3>
-	<h3 class="info indexh2">
-	Click here to join the search for Obama's last name: <a href="https://obamasearch.github.io/" target="_blank"> ObamaSearch </a>
-	</h3>
-	<h3 class="info indexh2">
-	Click here to find information about Marcelo's funeral: <a href="https://yeetaroni.github.io/marcelo/index.html" target="_blank"> RIP Marcelo</a>
-	</h3>
-	<h3 class="info indexh2">
-	Click here to learn about Speech and Debate: <a href="https://marchelo697.github.io/weneedmoney/index.html" target="_blank"> Speech and Debate</a>
-	</h3>
-	<iframe id="contactform" src="https://docs.google.com/forms/d/e/1FAIpQLSet9qn6RJpKdxUPfLMzQOwAfXddBWGz9NKVF5cUO4PF91Bc5g/viewform?embedded=true" width="700" height="900px" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
-	
+
+
 	</body>
 
 </html>
